<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mdproject.dicodingevent.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.mdproject.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.mdproject.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_finished_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mdproject.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailEventFragment"
        android:name="com.mdproject.dicodingevent.ui.detail.DetailFragment"
        android:label="@string/event_detail"
        tools:layout="@layout/fragment_detail">
    <argument
        android:name="selectedEvent"
        app:argType="com.mdproject.dicodingevent.data.local.entity.EventEntity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mdproject.dicodingevent.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mdproject.dicodingevent.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
    </fragment>
</navigation>