<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    tools:context=".ui.MainActivity"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/iv_event"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_event"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="4"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_event"
            card_view:layout_constraintTop_toTopOf="@id/iv_event"
            android:text="@string/title_event"
            />


        <TextView
            android:id="@+id/tv_event_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_event_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_event_name"
            tools:text="@string/event_type" />

        <TextView
            android:id="@+id/tv_event_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.888"
            card_view:layout_constraintStart_toStartOf="@+id/tv_event_type"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_event_type"
            tools:text="@string/event_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
